PP-11205 Address review comments